Fix calendar width on mobile

--- a/css/calendar.scss
+++ b/css/calendar.scss
@@ -33,6 +33,10 @@
 
 
 @media only screen and (max-width: 900px) {
+  .calendar-container {
+    width: 100%;
+  }
+
   .calendar {
     padding: 10px;
   }
